increases the z-index to avoid overlay collision

--- a/themes/css/map/cartodb-map-light.css
+++ b/themes/css/map/cartodb-map-light.css
@@ -14,7 +14,7 @@ div.cartodb-share {
   position:relative;
   float:right;
   margin: 20px 20px 0 0;
-  z-index: 5;
+  z-index: 105;
 }
 div.cartodb-share a {
   width: 14px;
@@ -62,7 +62,7 @@ div.cartodb-share a:active, div.cartodb-share a:hover:active {
   float:left;
   clear:both;
 
-  z-index: 5;
+  z-index: 105;
 }
 .cartodb-fullscreen a {
   display:block;
@@ -167,7 +167,7 @@ div.cartodb-share a:active, div.cartodb-share a:hover:active {
 
   line-height:14px;
   text-align:center;
-  z-index:5;
+  z-index:105;
 }
 
 .cartodb-share-dialog .block {
@@ -587,7 +587,7 @@ only screen and (                min-resolution: 2dppx) {
   border-radius: 0;
   border:none;
   border-bottom: 1px solid #505050;
-  z-index: 5;
+  z-index: 105;
 }
 .cartodb-mobile .aside .cartodb-searchbox input.text {
   border: none;
@@ -959,7 +959,7 @@ div.cartodb-legend-stack {
 
   border: 1px solid #999999;
   background: white;
-  z-index: 5;
+  z-index: 105;
 
   cursor: text;
 }
@@ -1007,7 +1007,7 @@ div.cartodb-legend {
 
   border: 1px solid #999999;
   background: white;
-  z-index: 5;
+  z-index: 105;
 }
 div.cartodb-legend .legend-title {
   margin: 0 0 10px 0;
@@ -1322,7 +1322,6 @@ div.cartodb-zoom {
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
   -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
   box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
-  z-index: 5;
   background: white;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -1330,6 +1329,7 @@ div.cartodb-zoom {
   -o-border-radius: 4px;
   border-radius: 4px;
   border: 1px solid #999999;
+  z-index: 105;
 }
 
 div.cartodb-zoom a {
@@ -1409,7 +1409,6 @@ div.cartodb-zoom-info {
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
   -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
   box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
-  z-index: 5;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
@@ -1417,6 +1416,7 @@ div.cartodb-zoom-info {
   border-radius: 4px;
   border: 1px solid #999999;
   background: white;
+  z-index: 105;
 }
 
 
@@ -1441,7 +1441,6 @@ div.cartodb-tiles-loader div.loader {
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
   -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
   box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
-  z-index: 5;
   background: url('../img/loader.gif') no-repeat center center white;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -1449,8 +1448,8 @@ div.cartodb-tiles-loader div.loader {
   -o-border-radius: 4px;
   border-radius: 4px;
   border: 1px solid #999999;
+  z-index: 105;
 }
-
 
 /* CartoDB layer selector box */
 
@@ -1466,7 +1465,6 @@ div.cartodb-layer-selector-box {
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
   -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
   box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
-  z-index: 5;
   background: white;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -1689,7 +1687,7 @@ div.cartodb-searchbox {
   -o-border-radius: 4px;
   border-radius: 4px;
   border: 1px solid #999999;
-  z-index:5;
+  z-index:105;
 }
 
 div.cartodb-searchbox span.loader {
@@ -1700,7 +1698,7 @@ div.cartodb-searchbox span.loader {
   width:22px;
   height:22px;
   background: url('../img/loader.gif') no-repeat center center white;
-  z-index:5;
+  z-index:105;
 }
 
 div.cartodb-searchbox input.text {
@@ -1768,7 +1766,7 @@ div.cartodb-infobox {
   border-radius: 4px;
   border: 1px solid #999999;
   text-align:left;
-  z-index:5;
+  z-index:105;
 }
 
 /* CartoDB dropdown */
@@ -1787,7 +1785,7 @@ div.cartodb-dropdown {
   -ms-box-shadow: rgba(0,0,0,0.2) 0 0 4px 1px;
   -o-box-shadow: rgba(0,0,0,0.2) 0 0 4px 1px;
   box-shadow: rgba(0,0,0,0.2) 0 0 4px 1px;
-  z-index:50;
+  z-index:150;
 }
 
 div.cartodb-dropdown.border {
@@ -1858,7 +1856,6 @@ div.cartodb-timeslider {
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
   -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
   box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
-  z-index: 5;
   background: white;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -1867,7 +1864,7 @@ div.cartodb-timeslider {
   border-radius: 4px;
   border: 1px solid #999999;
   text-align:left;
-  z-index:5;
+  z-index:105;
 }
 
 div.cartodb-timeslider ul {
